--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -1,18 +1,24 @@
 $cmd = ALT
 $win = SUPER
 
-# BASIC WINDOW ACTIONS
+# Terminal
 bind = $cmd, RETURN, exec, kitty
-bind = $cmd, Q, killactive,
-bind = $cmd, SPACE, exec, wofi --show drun 
+bind = $cmd SHIFT, RETURN, exec, [float] kitty
 
-bind = $win, E, exec, kitty yazi
-bind = $win, W, togglefloating,
+# Hyprland
+bind = $cmd SHIFT, P, exec, wlogout
+bind = $cmd, SPACE, exec, wofi --show drun
+bind = $cmd, Q, killactive,
+bind = $cmd, W, togglefloating,
+bind = $cmd, W, centerwindow
+bind = $cmd, S, pseudo
+bind = $cmd SHIFT, S, exec, hyprctl dispatch workspaceopt allpseudo
+
+# Misc
+bind = $win, E, exec, [float] dolphin
 bind = $win SHIFT, M, exec, ~/.config/hypr/scripts/wallpapers.sh
 
-bind = $cmd SHIFT, P, exec, wlogout
-
-# WORKSPACE NAVIGATION
+# Navigate workspace
 bind = $cmd, H, movefocus, l
 bind = $cmd, L, movefocus, r
 bind = $cmd, K, movefocus, u
@@ -24,7 +30,22 @@ bind = $cmd SHIFT, L, movewindow, r
 bind = $cmd SHIFT, K, movewindow, u
 bind = $cmd SHIFT, J, movewindow, d
 
-# Switch workspaces with mainMod + [0-9]
+bindm = $cmd, mouse:272, movewindow
+
+# Resize
+bindm = $cmd, mouse:273, resizewindow
+
+bind = $cmd SHIFT, R, submap, resize
+submap = resize
+bind = , L, resizeactive, 30 0
+bind = , H, resizeactive, -30 0
+bind = , K, resizeactive, 0 -30
+bind = , J, resizeactive, 0 30
+bind = , escape, submap, reset
+submap = reset
+
+
+# Open workspace 0-9
 bind = $cmd, 1, workspace, 1
 bind = $cmd, 2, workspace, 2
 bind = $cmd, 3, workspace, 3
@@ -36,7 +57,7 @@ bind = $cmd, 8, workspace, 8
 bind = $cmd, 9, workspace, 9
 bind = $cmd, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# Move active to workspace 0-9
 bind = $cmd SHIFT, 1, movetoworkspace, 1
 bind = $cmd SHIFT, 2, movetoworkspace, 2
 bind = $cmd SHIFT, 3, movetoworkspace, 3
@@ -47,14 +68,6 @@ bind = $cmd SHIFT, 7, movetoworkspace, 7
 bind = $cmd SHIFT, 8, movetoworkspace, 8
 bind = $cmd SHIFT, 9, movetoworkspace, 9
 bind = $cmd SHIFT, 0, movetoworkspace, 10
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $win, mouse_down, workspace, e+1
-bind = $win, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB (mouse binds)
-bindm = $win, mouse:272, movewindow
-bindm = $win, mouse:273, resizewindow
 
 # SYSTEM/MEDIA CONTROLS
 bind = , Print, exec, grimblast copy screen
