--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -11,8 +11,9 @@ bind = $cmd, SPACE, exec, wofi --show drun
 bind = $cmd, Q, killactive,
 bind = $cmd, W, togglefloating,
 bind = $cmd, W, centerwindow
-bind = $cmd, S, pseudo
-bind = $cmd SHIFT, S, exec, hyprctl dispatch workspaceopt allpseudo
+bind = $cmd, S, swapnext
+bind = $cmd, E, pseudo
+bind = $cmd SHIFT, E, exec, hyprctl dispatch workspaceopt allpseudo
 
 # Misc
 bind = $win, E, exec, [float] dolphin
