--- a/ansible/roles/hyprland/templates/.config/waybar/config.jsonc
+++ b/ansible/roles/hyprland/templates/.config/waybar/config.jsonc
@@ -8,9 +8,11 @@
     "margin-top": 1,
     "modules-left": [
         "custom/logo",
+        "wlr/taskbar"
+    ],
+    "modules-center": [
         "hyprland/workspaces"
     ],
-    "modules-center": [],
     "modules-right": [
         "cpu",
         "memory",
@@ -37,6 +39,13 @@
         "persistent_workspaces": {
             "1": [], "2": [], "3": [], "4": [], "5": []
         }
+    },
+    "wlr/taskbar": {
+        "format": "{icon}",
+        "all-outputs": true,
+        "tooltip-format": "{title}",
+        "on-click": "activate",
+        "on-click-middle": "close"
     },
     // System Modules
     "cpu": {
