add force kill kb

--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -9,6 +9,7 @@ bind = $cmd SHIFT, RETURN, exec, [float] kitty
 bind = $cmd SHIFT, P, exec, wlogout
 bind = $cmd, SPACE, exec, wofi --show drun
 bind = $cmd, Q, killactive,
+bind = $cmd SHIFT, Q, exec, kill -9 $(hyprctl activewindow | grep pid | tail -1 | awk '{print$2}')
 bind = $cmd, W, togglefloating,
 bind = $cmd, W, centerwindow
 bind = $cmd, S, swapnext
