--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -2,23 +2,27 @@ $cmd = ALT
 $win = SUPER
 
 # Terminal
-bind = $cmd, RETURN, exec, kitty
-bind = $cmd SHIFT, RETURN, exec, [float] kitty
+bind = $cmd,        RETURN, exec, kitty
+bind = $cmd SHIFT,  RETURN, exec, [float] kitty
 
 # Hyprland
-bind = $cmd SHIFT, P, exec, wlogout
-bind = $cmd, SPACE, exec, wofi --show drun
-bind = $cmd, Q, killactive,
-bind = $cmd SHIFT, Q, exec, kill -9 $(hyprctl activewindow | grep pid | tail -1 | awk '{print$2}')
-bind = $cmd, W, togglefloating,
-bind = $cmd, W, centerwindow
-bind = $cmd, S, swapnext
-bind = $cmd, E, pseudo
-bind = $cmd SHIFT, E, exec, hyprctl dispatch workspaceopt allpseudo
+bind = $cmd SHIFT,  P,      exec, wlogout
+bind = $cmd,        SPACE,  exec, wofi --show drun
+bind = $cmd,        S,      swapnext
+
+bind = $cmd,        Q,      killactive,
+bind = $cmd SHIFT,  Q,      exec, kill -9 $(hyprctl activewindow | grep pid | tail -1 | awk '{print$2}')
+
+bind = $cmd,        W,      togglefloating,
+bind = $cmd,        W,      centerwindow
+bind = $cmd SHIFT,  W,      exec, hyprctl dispatch workspaceopt allfloat
+
+bind = $cmd,        E,      pseudo
+bind = $cmd SHIFT,  E,      exec, hyprctl dispatch workspaceopt allpseudo
 
 # Misc
-bind = $win, E, exec, [float] dolphin
-bind = $win SHIFT, M, exec, ~/.config/hypr/scripts/wallpapers.sh
+bind = $win,        E,      exec, [float] dolphin
+bind = $win SHIFT,  M,      exec, ~/.config/hypr/scripts/wallpapers.sh
 
 # Navigate workspace
 bind = $cmd, H, movefocus, l
