--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -5,11 +5,11 @@
 # =======================
 monitor=,preferred,auto,1
 monitor=,highrr,auto,1
-monitor=,highres,auto,1.25
+monitor=,highres,auto,1
 
 # own
-monitor=DP-1,2560x1440@144,0x0,1
-monitor=DP-3,2560x1440@144,2560x0,1
+monitor=DP-1,3840x2160@240,0x0,1.5
+monitor=DP-3,2560x1440@144,2560x0,1.0
 
 # =======================
 # Startup
@@ -21,6 +21,11 @@ exec-once = wl-paste -t text --watch clipboard_history store
 exec-once = ~/.config/hypr/scripts/autostart.sh
 exec-once = swww-daemon
 exec-once = mako # notifications
+
+# =======================
+# Env
+# =======================
+env = ELECTRON_OZONE_PLATFORM_HINT, auto
 
 # =======================
 # Input
