--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -21,11 +21,17 @@ exec-once = wl-paste -t text --watch clipboard_history store
 exec-once = ~/.config/hypr/scripts/autostart.sh
 exec-once = swww-daemon
 exec-once = mako # notifications
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme catppuccin-frappe-mauve-cursors
+exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 
 # =======================
 # Env
 # =======================
 env = ELECTRON_OZONE_PLATFORM_HINT, auto
+env = HYPRCURSOR_THEME,catppuccin-frappe-mauve-cursors
+env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,catppuccin-frappe-mauve-cursors
+env = XCURSOR_SIZE,24
 
 # =======================
 # Input
