--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -21,6 +21,7 @@ bind = $cmd,        E,      pseudo
 bind = $cmd SHIFT,  E,      exec, hyprctl dispatch workspaceopt allpseudo
 
 # Misc
+bind = $win,        L,      exec, hyprlock
 bind = $win,        E,      exec, [float] dolphin
 bind = $win SHIFT,  M,      exec, ~/.config/hypr/scripts/wallpapers.sh
 
