--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -7,6 +7,10 @@ monitor=,preferred,auto,1
 monitor=,highrr,auto,1
 monitor=,highres,auto,1
 
+xwayland {
+    force_zero_scaling = true
+}
+
 # own
 monitor=DP-1,3840x2160@240,0x0,1.5
 monitor=DP-3,2560x1440@144,2560x0,1.0
