change waybar style & hyprland border colors

--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -12,8 +12,8 @@ xwayland {
 }
 
 # own
-monitor=DP-1,3840x2160@240,0x0,1.5
-monitor=DP-3,2560x1440@144,2560x0,1.0
+monitor=HDMI-A-1,3840x2160@240,0x0,1.5
+monitor=HDMI-A-2,2560x1440@60,2560x0,1.0
 
 # =======================
 # Startup
@@ -72,6 +72,7 @@ general {
 
     # Inactive window border color
     col.inactive_border = rgb(3b4252)
+    col.active_border = rgb(ca9ee6)
 
     layout = dwindle    # Default tiling layout. Options: `dwindle` (spiral), `master` (master-stack).
 }
@@ -80,13 +81,16 @@ general {
 # Decoration
 # =======================
 decoration {
-    rounding = 10              # Radius for rounded window corners (10 pixels). Set to 0 for sharp corners.
-    blur {                     # Background blur effect (behind floating windows, etc.)
-        enabled = true         # Enable blur
-        size = 3               # Blur strength (how many pixels to sample)
-        passes = 1             # Number of blur passes (higher = smoother but more resource intensive)
-        vibrancy = 0.16        # How much background color is incorporated into the blur (0 to 1)
+    rounding = 10
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
+        vibrancy = 0.16
     }
+
+    active_opacity = 0.95
+    inactive_opacity = 0.9
 }
 
 # =======================
