add keybind to idle

--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -27,6 +27,7 @@ exec-once = swww-daemon
 exec-once = mako # notifications
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme catppuccin-frappe-mauve-cursors
 exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
+exec-once = hypridle
 
 # =======================
 # Env
