--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -22,8 +22,10 @@ bind = $cmd SHIFT,  E,      exec, hyprctl dispatch workspaceopt allpseudo
 
 # Misc
 bind = $win,        L,      exec, hyprlock
-bind = $win,        E,      exec, [float] dolphin
+bind = $win,        E,      exec, [float] nautilus
 bind = $win SHIFT,  M,      exec, ~/.config/hypr/scripts/wallpapers.sh
+bind = $win, 	    F12,    exec, hyprctl dispatch dpms off
+bind = $win SHIFT,  F12,    exec, hyprctl dispatch dpms on
 
 # Navigate workspace
 bind = $cmd, H, movefocus, l
