--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -16,6 +16,7 @@ bind = $cmd SHIFT,  Q,      exec, kill -9 $(hyprctl activewindow | grep pid | ta
 bind = $cmd,        W,      togglefloating,
 bind = $cmd,        W,      centerwindow
 bind = $cmd SHIFT,  W,      exec, hyprctl dispatch workspaceopt allfloat
+bind = $cmd,        F,      fullscreen
 
 bind = $cmd,        E,      pseudo
 bind = $cmd SHIFT,  E,      exec, hyprctl dispatch workspaceopt allpseudo
