add keybind for volume control

--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -1,6 +1,10 @@
 $cmd = ALT
 $win = SUPER
 
+binds {
+    scroll_event_delay = 0
+}
+
 # Terminal
 bind = $cmd,        RETURN, exec, kitty
 bind = $cmd SHIFT,  RETURN, exec, [float] kitty
@@ -27,6 +31,9 @@ bind = $win,        E,      exec, [float] nautilus
 bind = $win SHIFT,  M,      exec, ~/.config/hypr/scripts/wallpapers.sh
 bind = $win, 	    F12,    exec, hyprctl dispatch dpms off
 bind = $win SHIFT,  F12,    exec, hyprctl dispatch dpms on
+
+bind = $win,        mouse_up, exec, pamixer -i 1
+bind = $win,        mouse_down, exec, pamixer -d 1
 
 # Navigate workspace
 bind = $cmd, H, movefocus, l
