--- a/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/keybinds.conf
@@ -32,8 +32,8 @@ bind = $win SHIFT,  M,      exec, ~/.config/hypr/scripts/wallpapers.sh
 bind = $win, 	    F12,    exec, hyprctl dispatch dpms off
 bind = $win SHIFT,  F12,    exec, hyprctl dispatch dpms on
 
-bind = $win,        mouse_up, exec, pamixer -i 1
-bind = $win,        mouse_down, exec, pamixer -d 1
+bind = $win,        mouse_up, exec, pamixer -d 1
+bind = $win,        mouse_down, exec, pamixer -i 1
 
 # Navigate workspace
 bind = $cmd, H, movefocus, l
