fix package name

--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -15,7 +15,7 @@ pacman_packages:
   - spotify-launcher
   - discord
   - steam
-  - proton-vpn
+  - proton-vpn-gtk-app
   - neovim
   - gcc
   - ripgrep
