--- a/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
+++ b/ansible/roles/hyprland/templates/.config/hypr/hyprland.conf
@@ -28,6 +28,7 @@ exec-once = mako # notifications
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme catppuccin-frappe-mauve-cursors
 exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 exec-once = hypridle
+exec-once = openrgb --startminimized &
 
 # =======================
 # Env
