--- a/ansible/roles/hyprland/tasks/main.yml
+++ b/ansible/roles/hyprland/tasks/main.yml
@@ -26,11 +26,13 @@
 
 - name: install hyprland related yay packages
   shell: |
-    yay -S --noconfirm --needed grimblast-git
-    yay -S --noconfirm --needed light
-    yay -S --noconfirm --needed wlogout
-    yay -S --noconfirm --needed swww
-    yay -S --noconfirm --needed catppuccin-cursors-frappe
+    yay -S --noconfirm --needed {{ item }}
+  loop:
+    - grimblast-git
+    - light
+    - wlogout
+    - swww
+    - catppuccin-cursors-frappe
   become: false
 
 - name: symlink dotfiles
@@ -45,6 +47,7 @@
     - waybar
     - wlogout
     - wofi
+  become: false
   register: stow_dotfiles
   changed_when: "'LINK' in stow_dotfiles.stdout or 'RESTOW' in stow_dotfiles.stdout"
 
