--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -176,6 +176,14 @@
     group: root
   become: yes
 
+- name: ensure correct permissions for system services
+  file:
+    path: /home/{{ ansible_user }}
+    mode '0755' # needed so sddm can access theme under /home/user/...
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+  become: true
+
 - name: enable and start sddm
   systemd:
     name: sddm.service
